--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,44 +1,36 @@
 ---
-import HeaderLink from './HeaderLink.astro';
-import "@fontsource-variable/playfair-display";
+import HeaderLink from "./HeaderLink.astro";
+
+const { href, class: className, isFixed, ...props } = Astro.props;
 ---
 
-<header>
-	<nav>
-		<div class="internal-links font-sans">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-		</div>
-	</nav>
-</header>
+<div class:list={[className, "text-text p-4 lg:px-36 md:px-20 bg-background w-screen z-10", {isFixed: isFixed && "fixed"}]} {...props}>
+	<header>
+		<nav>
+			<div class="flex flex-col gap-10 md:flex-row text-3xl">
+				<HeaderLink class="fancy-hover" href="/">Home</HeaderLink>
+				<HeaderLink class="fancy-hover" href="/blog">Blog</HeaderLink>
+				<HeaderLink class="fancy-hover" href="/pgp">PGP</HeaderLink>
+			</div>
+		</nav>
+	</header>
+</div>
 <style>
-	header {
-		margin: 0;
-		padding: 0 1em;
-		box-shadow: 0 2px 8px rgba(var(--black), 5%);
-	}
-	h2 {
-		margin: 0;
-		font-size: 1em;
+	.fancy-hover {
+		background-image: linear-gradient(#888 0 0);
+		background-repeat: no-repeat;
+		background-size: 200% 0.08em;
+		background-position: 200% 100%;
+		transition:
+			background-size 0.3s,
+			background-position 0.3s 0.3s;
 	}
 
-	h2 a,
-	h2 a.active {
-		text-decoration: none;
-	}
-	nav {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
-	nav a {
-		padding: 1em 0.5em;
-		color: var(--black);
-		border-bottom: 4px solid transparent;
-		text-decoration: none;
-	}
-	nav a.active {
-		text-decoration: none;
-		border-bottom-color: var(--accent);
+	.fancy-hover:hover {
+		transition:
+			background-size 0.3s 0.3s,
+			background-position 0.3s;
+		background-size: 200% 100%;
+		background-position: 100% 100%;
 	}
 </style>
