--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,173 +1,129 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import { SITE_TITLE, SITE_DESCRIPTION, links, projects } from "../consts";
 import { Icon } from "astro-icon";
-import "@fontsource-variable/playfair-display";
+import "@fontsource-variable/roboto-mono";
+import "@fontsource-variable/manrope";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
-
-const links = [
-	{
-		label: "Github",
-		link: "https://github.com/sbaumohl",
-		icon: "github",
-	},
-	{
-		label: "Email",
-		icon: "mail",
-		link: "mailto:mail@sambaumohl.me",
-	},
-	// {
-	// 	label: "Instagram",
-	// 	link: "https://www.instagram.com/sam_b2327/",
-	// 	icon: "instagram",
-	// },
-	{
-		label: "LinkedIn",
-		icon: "linkedin",
-		link: "https://www.linkedin.com/in/sam-baumohl09/",
-	},
-	// {
-	// 	label: "PGP",
-	// 	icon: "key",
-	// 	link: "",
-	// },
-];
-
-const skills = new Map([
-	["Frameworks", ["Angular", "React.js", "Astro", "NodeJS"]],
-	["Languages", ["Java", "Python", "Javascript", "Typescript", "HTML", "CSS"]],
-	["Other Tools", ["AWS", "Docker", "Git", "Linux", "PostgreSQL", "SQL"]],
-]);
-const introUnderlineStyle =
-	"underline underline-offset-8 md:decoration-4 decoration-accent";
-
-const projects = [
-	{
-		title: "MyMICDS.net",
-		description:
-			"An all-in-one platform for MICDS student life built with Angular, Express, MongoDB, and NodeJS.",
-		github: "https://github.com/MyMICDS/",
-		link: "https://mymicds.net/",
-	},
-	{
-		title: "BYO Style-Based GAN",
-		description:
-			"A blackbox implementation of NVIDIA's StyleGAN (Style-Based Generative Adversarial Neural Network) using PyTorch and Python.",
-		github: "https://github.com/sbaumohl/BYO-GAN",
-	},
-    {
-        title: "This Website™",
-        description: "Built with Astro, Typescript, and Tailwindcss, and populated using my own images."
-    }
-];
 ---
 
 <!doctype html>
-<html lang="en" class="min-h-full h-100 subpixel-antialiased">
+<html lang="en" class="min-h-full h-100 subpixel-antialiased text-text">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body class="font-thin font-sans p-4">
-		<div class="h-screen bg-fixed bg-zona bg-cover rounded-lg overflow-hidden">
-			<Header />
-			<div class="h-screen flex flex-row justify-center select-none">
-				<h1
-					class="sm:text-9xl text-7xl font-semibold text-black self-center mix-blend-overlay animation-fade fixed text-clip"
-					id="name"
-				>
+	<body class="font-thin font-mono bg-background">
+		
+		<Header isFixed="true"/>
+
+		<div class="lg:px-36 md:px-20 px-4 md:pt-4">
+
+			<!-- Hero -->
+			<div class="hero-header text-2xl overflow-hidden flex flex-col">
+				<h1 class="z-0 absolute inset-y-1/2 md:inset-x-1/4 inset-x-4 font-sans select-none lg:text-9xl text-7xl text-center p-auto font-bold opacity-90 ">
 					Sam Baumohl
 				</h1>
-			</div>
-			<div class="flex">
-				{
-					links.map((val) => (
-						<a
-							class="first:ml-20 border-l-0 first:border-l p-2 border-t border-x border-black hover:underline"
-							target="_blank"
-							rel="noopener noreferrer"
-							href={val.link}
-						>
-							{val.label}
-						</a>
-					))
-				}
-			</div>
-		</div>
 
-		<div class="my-8 w-4/5 h-screen">
-			<p class="text-lg mt-4">
-				Saint Louis, Missouri born and raised, I study <span
-					class={introUnderlineStyle}>Computer Sciences</span
-				> and <span class={introUnderlineStyle}>Legal Studies</span> at the <span
-				class={introUnderlineStyle}
-					>University of Wisconsin-Madison</span
-				>. I'm passionate about Software Development, Machine Learning, and
-				Technology Policy.
-			</p>
-		</div>
-
-		<div class="my-5 text-center transparent">
-			<h1 class="text-7xl">My Skills</h1>
-			<div
-				class="flex md:flex-row flex-col md:gap-40 gap-4 sm:py-24 py-6 sm:px-20 px-4 text-2xl"
-			>
-				{
-					Array.from(skills.entries()).map(([key, value]) => (
-						<div class="grow rounded-lg bg-primary mx-20 p-4 hover:scale-125 hover:shadow-2xl ease-in-out duration-150">
-							<h2 class="text-4xl mb-3">{key}</h2>
-							<ul>
-								{value.map((d) => (
-									<li>{d}</li>
-								))}
-							</ul>
-						</div>
-					))
-				}
+				<div class="h-screen max-h-screen break-words">
+					<p
+						id="hero-text"
+						class="font-mono text-gray-200 select-none tracking-tighter"
+					>
+					</p>
+				</div>
 			</div>
-		</div>
 
-        <div class="p-5 bg-foss bg-fixed bg-cover rounded-md h-screen text-black mix-blend-hue saturate-200">
-			<h1 class="text-7xl text-center">My Projects</h1>
-			<div class="flex md:flex-row flex-col lg:gap-15 gap-4 sm:py-24 py-6 sm:px-48 px-4">
-				{
-					projects.map((val) => (
-						<div class="grow flex-1 basis-0 p-4">
-							<h2 class="text-4xl mb-3">{val.title}</h2>
-							<p class="text-left mb-3">{val.description}</p>
-							<div class="flex flex-row">
-								<a
-									href={val.github}
-									target="_blank"
-									rel="noopener noreferrer"
-									class="hover:underline mr-2"
-								>
-									<Icon name="github" class="w-5 mr-1 float-left" />
-									Code
-								</a>
-								{val.link && (
-									<>{" | "}</>
-									<a
-										id="myLink"
-										href={val.link}
-										target="_blank"
-										class="underline ml-2"
-									>
-										Visit
-									</a>
-								)}
+			<!-- Lower-Third, Links, and Picture -->
+			<div class="lg:w-3/5 md:mx-auto md:my-10 text-justify font-sans font-semibold h-screen min-h-max flex flex-col space-between justify-items-center justify-around">
+				<p class="text-xl">
+					Saint Louis, Missouri born and raised, I study Computer Sciences and Legal Studies at the University of Wisconsin-Madison. I'm passionate about Software Development, Machine Learning, and
+					Technology Policy.
+				</p>
+				<img src="strauss2.jpg" alt="Portrait" class="aspect-square sm:w-1/2 w-1/3 mx-auto rounded-lg">
+				<div class="flex gap-10 mx-auto text-xl">
+					{
+						links.map((val) => (
+							<a
+								class="fancy-hover p-2 px-4"
+								target="_blank"
+								rel="noopener noreferrer"
+								href={val.link}
+							>
+								{val.label}
+							</a>
+						))
+					}
+				</div>
+			</div>
+
+			<!-- Skills -->
+			<!-- <div class="my-5 text-center transparent font-sans">
+				<h1 class="text-7xl text-white">My Skills</h1>
+				<div
+					class="flex md:flex-row flex-col md:gap-40 gap-4 sm:py-24 py-6 sm:px-20 px-4 text-2xl space-between"
+				>
+					{
+						Array.from(skills.entries()).map(([key, value]) => (
+							<div class="grow rounded-lg bg-gray-400 mx-20 p-4 hover:scale-125 hover:shadow-2xl ease-in-out duration-150">
+								<h2 class="text-4xl mb-3">{key}</h2>
+								<ul>
+									{value.map((d) => (
+										<li>{d}</li>
+									))}
+								</ul>
 							</div>
-						</div>
-					))
-				}
+						))
+					}
+				</div>
+			</div> -->
+
+			<!-- Projects -->
+			<div class="rounded-md text-white transparent">
+				<h1 class="text-7xl text-center">My Projects</h1>
+				<div class="flex lg:flex-row flex-col xl:gap-24 gap-4 sm:py-24 py-6 ">
+					{
+						projects.map((val) => (
+							<div class="grow flex-1 basis-0 p-4">
+								<h2 class="text-4xl mb-3">{val.title}</h2>
+								<p class="text-left mb-3">{val.description}</p>
+								<div class="flex flex-row">
+									<a
+										href={val.github}
+										target="_blank"
+										rel="noopener noreferrer"
+										class="hover:underline mr-2"
+									>
+										<Icon name="github" class="w-5 mr-1 float-left" />
+										Code
+									</a>
+									{val.link && (
+										<>{" | "}</>
+										<a
+											id="myLink"
+											href={val.link}
+											target="_blank"
+											class="fancy-hover px-1 ml-2"
+										>
+											Visit
+										</a>
+									)}
+								</div>
+							</div>
+						))
+					}
+				</div>
 			</div>
-		</div>
+	</div>
+
+		<!-- Footer -->
+		<Footer havePhotoCredits={true}/>
 		<style>
 			.transparent {
 				background-color: rgba(170, 170, 170, 0.22);
 			}
 
-			.animation-fade {
+			/* .animation-fade {
 				animation-name: fadein;
 				animation-duration: 1.5s;
 			}
@@ -182,7 +138,32 @@ const projects = [
 					offset-position: 0cm 0cm;
 					opacity: 100%;
 				}
+			} */
+
+			.fancy-hover {
+				background-image: linear-gradient(#888 0 0);
+				background-repeat: no-repeat;
+				background-size: 200% .08em;
+  				background-position: 200% 100%;
+				transition: background-size .3s, background-position .3s .3s;
+			}
+
+			.fancy-hover:hover {
+				transition: background-size .3s .3s, background-position .3s;
+				background-size: 200% 100%;
+  				background-position: 100% 100%;
 			}
 		</style>
+		<script async>
+			function refreshNumbers() {
+				let c = Array.from({ length: 5000 }, (_, e) =>
+					Math.random() >= 0.5 ? 1 : 0,
+				).join("");
+				document.getElementById("hero-text").innerHTML = c;
+				setTimeout(refreshNumbers, 350);
+			}
+
+			refreshNumbers();
+		</script>
 	</body>
 </html>
