--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -14,7 +14,7 @@ const isActive = href === pathname || href === pathname.replace(/\/$/, '');
 </a>
 <style>
 	a.active {
-		font-weight: bolder;
-		text-decoration: underline;
+		font-weight: 900;
+		/* text-decoration: underline; */
 	}
 </style>
