--- a/src/layouts/BasePage.astro
+++ b/src/layouts/BasePage.astro
@@ -6,7 +6,7 @@ import "@fontsource-variable/manrope";
 ---
 
 <!doctype html>
-<html lang="en" class="min-h-full h-100 subpixel-antialiased text-text">
+<html data-theme="night" lang="en" class="min-h-full h-100 subpixel-antialiased">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
