--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,44 +1,46 @@
 ---
-import BaseHead from '../../components/BaseHead.astro';
-import Header from '../../components/Header.astro';
-import Footer from '../../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
-import { getCollection } from 'astro:content';
-import FormattedDate from '../../components/FormattedDate.astro';
+import BaseHead from "../../components/BaseHead.astro";
+import Header from "../../components/Header.astro";
+import Footer from "../../components/Footer.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts";
+import { getCollection } from "astro:content";
+import FormattedDate from "../../components/FormattedDate.astro";
 import "@fontsource-variable/roboto-mono";
 import "@fontsource-variable/manrope";
+import BasePage from "../../layouts/BasePage.astro";
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+const posts = (await getCollection("blog")).sort(
+	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf(),
 );
 ---
 
-<!doctype html>
-<html lang="en" class="min-h-full h-100 subpixel-antialiased text-text">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body class="font-mono">
+<BasePage>
+	<body>
 		<Header />
-		<main>
-			<section>
-				<ul>
-					{
-						posts.map((post) => (
-							<li>
-								<a href={`/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
+		<main class="md:mt-5">
+			<section class="w-3/5 mx-auto flex flex-col gap-10">
+				{
+					posts.map((post) => (
+						<a href={`/blog/${post.slug}/`}>
+							<div class="flex flex-row gap-2">
+								<img
+									width={270}
+									height={135}
+									src={post.data.heroImage}
+									alt=""
+								/>
+								<div class="flex flex-col">
+									<h4 class="text-2xl font-semibold">{post.data.title}</h4>
+									<p class="">
 										<FormattedDate date={post.data.pubDate} />
 									</p>
-								</a>
-							</li>
-						))
-					}
-				</ul>
+								</div>
+							</div>
+						</a>
+					))
+				}
 			</section>
 		</main>
 		<Footer />
 	</body>
-</html>
+</BasePage>
