--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const today = new Date();
 const { havePhotoCredits } = Astro.props;
 ---
 
-<footer>
+<footer class="bg-secondary-focus mt-2">
 	&copy; {today.getFullYear()}
 	{" " + NAME}. All rights reserved. {
 		havePhotoCredits && (
