--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -8,37 +8,42 @@ import BasePage from "./BasePage.astro";
 
 type Props = CollectionEntry<"blog">["data"];
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+const { title, description, pubDate, updatedDate, heroImage, author } =
+	Astro.props;
 ---
 
 <BasePage>
 	<body>
 		<Header />
-		<main>
+		<main class="my-16 md:w-[720px] max-md:p-2 mx-auto">
 			<article>
 				<div class="hero-image">
 					{
 						heroImage && (
-							<img width={1020} height={510} src={heroImage} alt="" />
+							<img src={heroImage} alt="" class="mb-16 mx-auto aspect-square" />
 						)
 					}
 				</div>
-				<div class="prose">
-					<div class="title">
-						<div class="date">
-							<FormattedDate date={pubDate} />
-							{
-								updatedDate && (
-									<div class="last-updated-on">
-										Last updated on <FormattedDate date={updatedDate} />
-									</div>
-								)
-							}
-						</div>
-						<h1>{title}</h1>
-						<hr />
+				<div>
+					<h1 class="text-5xl font-bold">{title}</h1>
+					<h2 class="text-lg font-medium text-neutral-focus mt-4">
+						{description}
+					</h2>
+					<div class="text-primary mt-8">
+						Published <FormattedDate date={pubDate} />
+						{
+							updatedDate && (
+								<div>
+									Last updated on <FormattedDate date={updatedDate} />
+								</div>
+							)
+						}
+						<div class="text-secondary">{author}</div>
 					</div>
-					<slot />
+					<hr class="my-8" />
+					<div class="prose">
+						<slot />
+					</div>
 				</div>
 			</article>
 		</main>
