--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,18 +14,18 @@ import Header from "../components/Header.astro";
 			<!-- Hero -->
 			<div class="sm:mt-20 text-2xl overflow-hidden flex lg:flex-row-reverse flex-col">
 				<div class="mx-6">
-					<h1 class="mb-2 font-sans select-none xl:text-8xl md:text-7xl text-5xl font-bold">
+					<h1 class="mb-2 font-sans select-none xl:text-8xl md:text-6xl text-5xl font-bold">
 						Sam Baumohl
 					</h1>
-					<p class="mb-8 md:text-xl text-lg font-sans font-medium">
+					<p class="md:pl-2 mb-16 md:text-xl text-lg font-sans font-medium">
 						Saint Louis, Missouri born and raised, I study <span class="text-primary">Computer Sciences</span> and <span class="text-success">Legal Studies</span> at the <span class="text-accent">University of Wisconsin-Madison</span>. I'm passionate about Software Development, Machine Learning, and
 						Technology Policy.
 					</p>
-					<div class="flex justify-around sm:gap-10 mx-auto text-3xl">
+					<div class="flex justify-around sm:gap-10 mx-auto text-3xl mb-16">
 						{
 							links.map((val) => (
 								<a
-									class="fancy-hover p-2 px-4"
+									class="fancy-hover xs:p-2 p-1 sm:px-4"
 									target="_blank"
 									rel="noopener noreferrer"
 									href={val.link}
@@ -36,17 +36,17 @@ import Header from "../components/Header.astro";
 						}
 					</div>
 				</div>
-				<img src="strauss2.jpg" alt="Portrait" class="max-md:my-10 aspect-square md:w-1/3 w-1/2 mx-auto rounded-lg">
+				<img src="strauss2.jpg" alt="Portrait" class="shrink-0 max-md:my-10 aspect-square md:w-1/3 w-1/2 mx-auto rounded-lg">
 			</div>
 
 		<!-- Projects -->
-		<div class="md:mt-10">
-			<h1 class="xl:text-8xl text-5xl text-center">My Projects</h1>
+		<div class="lg:mt-48 mt-8">
+			<h1 class="xl:text-8xl text-7xl text-center">My Projects</h1>
 			<div class="flex lg:flex-row flex-col xl:gap-24 gap-4 sm:py-24 py-6 ">
 				{
 					projects.map((val) => (
 						<div class="grow flex-1 basis-0 p-4">
-							<h2 class="text-4xl mb-3">{val.title}</h2>
+							<h2 class="text-primary text-4xl mb-3">{val.title}</h2>
 							<p class="text-left mb-3">{val.description}</p>
 							<div class="flex flex-row">
 								<a
