--- a/src/pages/pgp.astro
+++ b/src/pages/pgp.astro
@@ -14,7 +14,7 @@ import BasePage from "../layouts/BasePage.astro"
 		
 		<div class="md:w-3/4 p-2 mx-auto">
 			<p class="mt-10 ">Below is my PGP Public Encryption Key. if you want to reach me and want to add an extra layer of security to your message, use this!</p>
-			<div class="prose-code text-primary-content select-all text-primary">
+			<div class="prose-code select-all text-info">
 				<pre><code set:text={PGP_KEY} class="md:text-lg text-xs"/></pre>
 			</div>
 		</div>
