--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,20 @@
 ---
 import { NAME } from "../consts";
 const today = new Date();
+
+const { havePhotoCredits } = Astro.props;
 ---
 
-<footer>
-	&copy; {today.getFullYear()} {" " + NAME}. All rights reserved.
+<footer class="bg-secondary-focus mt-2">
+	&copy; {today.getFullYear()}
+	{" " + NAME}. All rights reserved. {
+		havePhotoCredits && (
+			<>
+				Personal Photography by{" "}
+				<a href="https://www.strausspeyton.com/" class="hover:underline">Strauss Peyton</a>.
+			</>
+		)
+	}
 </footer>
 <style>
 	footer {
