--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -13,12 +13,8 @@ const isActive = href === pathname || href === pathname.replace(/\/$/, '');
 	<slot />
 </a>
 <style>
-	a {
-		display: inline-block;
-		text-decoration: none;
-	}
 	a.active {
-		font-weight: bolder;
-		text-decoration: underline;
+		font-weight: 900;
+		/* text-decoration: underline; */
 	}
 </style>
