fix padding and color

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,10 +7,10 @@ const { href, class: className, isFixed, ...props } = Astro.props;
 <div class:list={[className, "px-2 py-5 lg:px-36 md:px-20 bg-base-100 w-screen", isFixed && "md:fixed"]} {...props}>
 	<header>
 		<nav>
-			<div class="flex flex-row max-sm:justify-center gap-10 text-3xl">
-				<HeaderLink class="fancy-hover" href="/">Home</HeaderLink>
-				<HeaderLink class="fancy-hover" href="/blog">Blog</HeaderLink>
-				<HeaderLink class="fancy-hover" href="/pgp">PGP</HeaderLink>
+			<div class="flex flex-row max-sm:justify-center gap-8 text-3xl">
+				<HeaderLink class="fancy-hover p-1 sm:px-4" href="/">Home</HeaderLink>
+				<HeaderLink class="fancy-hover p-1 sm:px-4" href="/blog">Blog</HeaderLink>
+				<HeaderLink class="fancy-hover p-1 sm:px-4" href="/pgp">PGP</HeaderLink>
 			</div>
 		</nav>
 	</header>
