--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Header from "../components/Header.astro";
 						Sam Baumohl
 					</h1>
 					<p class="md:pl-2 mb-16 md:text-xl text-lg font-sans font-medium">
-						Saint Louis, Missouri born and raised, I study <span class="text-primary">Computer Sciences</span> and <span class="text-success">Legal Studies</span> at the <span class="text-accent">University of Wisconsin-Madison</span>. I'm passionate about Software Development, Machine Learning, and
+						Saint Louis, Missouri born and raised, I study <span class="text-primary">Computer Sciences</span> and <span class="text-success">Legal Studies</span> at the <span class="text-secondary">University of Wisconsin-Madison</span>. I'm passionate about Software Development, Machine Learning, and
 						Technology Policy.
 					</p>
 					<div class="flex justify-around sm:gap-10 mx-auto text-3xl mb-16">
@@ -36,17 +36,17 @@ import Header from "../components/Header.astro";
 						}
 					</div>
 				</div>
-				<img src="strauss2.jpg" alt="Portrait" class="shrink-0 max-md:my-10 aspect-square md:w-1/3 w-1/2 mx-auto rounded-lg">
+				<img src="strauss2.jpg" alt="Portrait" class="shrink-0 max-md:my-10 aspect-square md:w-1/3 w-1/2 mx-auto rounded-[1.75rem]">
 			</div>
 
 		<!-- Projects -->
 		<div class="lg:mt-48 mt-8">
-			<h1 class="xl:text-8xl text-7xl text-center">My Projects</h1>
-			<div class="flex lg:flex-row flex-col xl:gap-24 gap-4 sm:py-24 py-6 ">
+			<h1 class="xl:text-8xl text-7xl text-center font-bold">My Projects</h1>
+			<div class="flex lg:flex-row flex-col xl:gap-24 gap-4 sm:py-24 py-6">
 				{
 					projects.map((val) => (
 						<div class="grow flex-1 basis-0 p-4">
-							<h2 class="text-primary text-4xl mb-3">{val.title}</h2>
+							<h2 class="text-secondary text-4xl mb-3">{val.title}</h2>
 							<p class="text-left mb-3">{val.description}</p>
 							<div class="flex flex-row">
 								<a
