--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -20,7 +20,7 @@ const posts = (await getCollection("blog")).sort(
 				{
 					posts.map((post) => (
 						<a href={`/blog/${post.slug}/`}>
-							<div class="flex flex-row gap-6">
+							<div class="flex flex-col md:flex-row gap-6">
 								<img
 									width={270}
 									height={135}
