--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Header from "../components/Header.astro";
 			<!-- Hero -->
 			<div class="sm:mt-20 text-2xl overflow-hidden flex lg:flex-row-reverse flex-col">
 				<div class="mx-6">
-					<h1 class="mb-2 font-sans select-none xl:text-8xl md:text-6xl text-5xl font-bold">
+					<h1 class="mb-2 font-sans xl:text-8xl md:text-6xl text-5xl font-bold">
 						Sam Baumohl
 					</h1>
 					<p class="md:pl-2 mb-16 md:text-xl text-lg font-sans font-medium">
@@ -36,28 +36,25 @@ import Header from "../components/Header.astro";
 						}
 					</div>
 				</div>
-				<img src="strauss2.jpg" alt="Portrait" class="shrink-0 max-md:my-10 aspect-square md:w-1/3 w-1/2 mx-auto rounded-[1.75rem]">
+				<img src="strauss2.jpg" alt="Portrait" class="shrink-0 max-md:my-10 aspect-square md:w-1/4 w-1/2 mx-auto rounded-[1.75rem]">
 			</div>
 
 		<!-- Projects -->
 		<div class="lg:mt-48 mt-8">
 			<h1 class="xl:text-8xl text-7xl text-center font-bold">My Projects</h1>
 			<div class="flex lg:flex-row flex-col xl:gap-24 gap-4 sm:py-24 py-6">
+			<!-- rel="noopener noreferrer" -->
 				{
 					projects.map((val) => (
 						<div class="grow flex-1 basis-0 p-4">
 							<h2 class="text-secondary text-4xl mb-3">{val.title}</h2>
 							<p class="text-left mb-3">{val.description}</p>
 							<div class="flex flex-row">
-								<a
-									href={val.github}
-									target="_blank"
-									rel="noopener noreferrer"
-									class="hover:underline mr-2"
-								>
-									<Icon name="github" class="w-5 mr-1 float-left" />
-									Code
-								</a>
+								<form action={val.github} method="get" target="_blank" > 
+									<button type="submit" class="hover:underline mr-2" >
+										<Icon name="github" class="w-5 mr-1 float-left" />Code
+									</button>
+								</form>
 								{val.link && (
 									<>{" | "}</>
 									<a
