--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Header from "../components/Header.astro";
 		<div class="lg:px-36 md:px-20 px-4 md:pt-4">
 			<!-- Hero -->
 			<div class="sm:mt-20 text-2xl overflow-hidden flex lg:flex-row-reverse flex-col">
-				<div class="mx-6">
+				<div class="lg:basis-3/5 mx-6">
 					<h1 class="mb-2 font-sans xl:text-8xl md:text-6xl text-5xl font-bold">
 						Sam Baumohl
 					</h1>
@@ -36,7 +36,7 @@ import Header from "../components/Header.astro";
 						}
 					</div>
 				</div>
-				<img src="strauss2.jpg" alt="Portrait" class="shrink-0 max-md:my-10 aspect-square md:w-1/4 w-1/2 mx-auto rounded-[1.75rem]">
+				<img src="strauss2.jpg" alt="Portrait" class="object-cover w-full h-full max-md:my-15 aspect-square md:w-1/4 w-1/2 mx-auto rounded-[1.75rem]">
 			</div>
 
 		<!-- Projects -->
