update astro - compress

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BasePage from "../layouts/BasePage.astro";
 import { links, projects } from "../consts";
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 import "@fontsource-variable/roboto-mono";
 import "@fontsource-variable/manrope";
 import Footer from "../components/Footer.astro";
@@ -20,7 +20,7 @@ import headshot from "../images/strauss.webp"
 						Sam Baumohl
 					</h1>
 					<p class="md:pl-1 mb-16 md:text-xl text-lg font-sans font-medium">
-						Saint Louis, Missouri born and raised, I study <span class="text-primary">Computer Sciences</span> and <span class="text-success">Legal Studies</span> at the <span class="text-secondary">University of Wisconsin-Madison</span>. I'm passionate about Software Development, Machine Learning, and
+						Saint Louis, Missouri born and raised, I study <span class="text-primary">Computer Sciences</span> at the <span class="text-secondary">University of Wisconsin-Madison</span>. I'm passionate about Software Development, Machine Learning, and
 						Technology Policy.
 					</p>
 					<div class="flex justify-around sm:gap-10 mx-auto text-3xl mb-16">
